--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     </article>
   </main>
   <footer>
-    <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
-        Mentor</a>. Coded by <a href="https://github.com/verakissyou" target="_blank">Vera</a>. </p>
+    <div> Challenge by <a href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/verakissyou17"
+        target="_blank">Vera</a>. </div>
   </footer>
   <script src="app.js"></script>
 </body>
